--- a/database/索引.md
+++ b/database/索引.md
@@ -40,6 +40,21 @@
 样才能⽤到联合索引，这是由于在建⽴a,b,c三个字段的联合索引时，底层的B+树是按照a,b,c三个字段
 从左往右去⽐较⼤⼩进⾏排序的，所以如果想要利⽤B+树进⾏快速查找也得符合这个规则
 
+### 什么情况下有索引，但用不上？
+- a)	如果条件中有OR，即使其中有部分条件带索引也不会使用。注意：要想使用or，又想让索引生效，只能将or条件中的每个列都加上索引。
+- b)	对于多了索引，不是使用的第一部分，则不会使用索引。
+- c)	Like查询以%开头，不使用索引
+- d)	存在索引列的数据类型隐形转换，则用不上索引，比如列类型是字符串，那一定要在条件中将数据使用引号引用起来,否则不使用索引
+- e)	Where 子句里对索引列上有数学运算，用不上索引
+- f)	Where 子句中对索引列使用函数，用不上索引
+- g)	Mysql估计使用全表扫描要比用索引快，不使用索引
+
+### 什么情况下不推荐使用索引？
+- a)	数据唯一性差的字段不要使用索引
+- b)	频繁更新的字段不要使用索引
+- c)	字段不在where语句中出现时不要添加索引，如果where后含IS NULL/IS NOT NULL/LIKE ‘%输入符%’等条件，不要使用索引
+- d)	Where子句里对索引使用不等于（<>），不建议使用索引，效果一般
+
 ### innodb如何实现事务的
 Innodb通过Buffer Pool，LogBuffer，Redo Log，Undo Log来实现事务，以⼀个update语句为例：
 1. Innodb在收到⼀个update语句后，会先根据条件找到数据所在的⻚，并将该⻚缓存在Buffer Pool
